# databricks-cli

./: dev-requirements-py2.txt  dev-requirements-py3.txt  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox-requirements.txt
databricks_cli/: version.py
databricks_cli/sdk/: service.py
